##Text encoding: utf-8

2011-01-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: add brackets.*.
	* libs/gccv/brackets.cc: new Item class.
	* libs/gccv/brackets.h: ditto.
	* libs/gcp/brackets.h: remove unneeded virtual keyword.

2011-01-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/Makefile.am: no more direct linking to openbabel.
	* libs/gcu/application.cc: load distant files using babelserver.
	* libs/gcu/chem3ddoc.cc: no more use of openbabel.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcu/gcuchem3dviewer.cc: ditto.
	* libs/gcu/gcuchem3dviewer.h: ditto.
	* openbabel/babelserv.cc: don't close socket too early.
	* tests/testbabelserver.c (main): avoid infinite loop.

2011-01-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: do not call Application::Load() for native files.
	* libs/gcp/document.cc: fixed merging molecules owned by another object.
	* plugins/paint/cycles/cycletool.cc: never address a deleted string.

2011-01-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: add content type.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/fragment.cc: removed obsolete code.
	* libs/gcp/mechanism-step.cc: don't crash when adding an arrow ouside
	a reaction.
	* plugins/paint/cycles/cycletool.cc: do not add a cycle when not allowed.

2011-01-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/Makefile.am: add libexecdir to DEFS.
	* libs/gcu/application.cc: new methods to support the use of babelserver.
	* libs/gcu/application.h: ditto.
	* libs/gcu/chem3ddoc.cc: remove unwanted white spaces.
	* openbabel/babelserv.cc: use a user dependant socket.
	* openbabel/socket.cc: fix loading from file.
	* tests/testbabelserver.c (main): use a user dependant socket.

2011-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: allow load/save operations using any gsf
	stream.
	* libs/gcu/application.h: ditto.
	* openbabel/babelserv.cc: fixed reading from socket.