@@ -51,8 +51,6 @@ int main (int argc, char *argv[])
 
 	// create a new Application. This initialize Goffice
 	gsvApplication *App = new gsvApplication ();
-	// Initialize plugins manager
-	go_plugins_init (NULL, NULL, NULL, NULL, TRUE, GO_TYPE_PLUGIN_LOADER_MODULE);
 	gsvDocument *pDoc = App->OnFileNew();
 	char *path, *uri;
 	bool bres = false;
